--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -16,16 +16,18 @@ nav {
 
 .logo h2 {
   color: darkolivegreen ;
-  font-size: 1.8rem;
+  font-size: 2.8rem;
   margin: 0;
+  font-family: sans-serif;
 }
 
 .logo em {
   font-style: italic;
+  font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
 .code-symbol {
-  font-family: 'Courier New', Courier, monospace;  /* Monospace font for code */
+  font-family: 'Courier New', Courier, monospace;  
   font-size: 1rem;
   color: white; 
 }
@@ -38,6 +40,8 @@ ul {
   flex-grow: 1;
   justify-content: flex-end;
   overflow-x: auto;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
 }
 
 ul li {
@@ -55,7 +59,7 @@ ul li a {
 }
 
 ul li a:hover {
-  color: #4c5270;
+  color: darkolivegreen;
 }
 
 /* Media Query for tablets */
