--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
 nav {
   background-color: black;
-  width: 100%;
+  width: 100vw;
   padding: 15px 30px;
   display: flex;
   justify-content: space-between;
