--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,3 +1,4 @@
+
 body, html {
     margin: 0;
     padding: 0;
@@ -192,4 +193,35 @@ body, html {
     font-size: 1.2rem;
     color: #666;
     font-weight: bold;
+}
+
+@media screen and (max-width:768px) {
+    .welcome-content {
+        justify-content: center;
+        flex-direction: column-reverse;
+    }
+
+    .profile-image {
+        width: 200px;
+        height: 200px;
+        border: 5px solid darkolivegreen;
+    }
+
+    /* about */
+    .about-section {
+        height: fit-content;
+    }
+    .about-content {
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .about-left {
+        max-width: 50vw;
+    }
+    .welcome-message h1 {
+        font-size: 3rem;
+    }
 }
