--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -38,11 +38,16 @@ body {
 }
 
 .projects-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  /* display: grid;
+  grid-template-columns: repeat(3, 1fr); */
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   gap: 20px;
-  padding: 0 20px;
-  width: 100%;
+  /* padding: 0 25px; */
+  margin: 0 15px;
+  width: 100vw;
   max-width: 1200px;
 }
 
@@ -96,13 +101,11 @@ body {
 
 /* Responsive Design */
 @media (max-width: 768px) {
-  .projects-grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
+  .project-card {
+    margin: 7px;
+}
 }
 
 @media (max-width: 480px) {
-  .projects-grid {
-    grid-template-columns: 1fr;
-  }
+
 }
